# Django

./: .env  README.md  catalog_fixture.json  pyproject.toml  requirements.txt
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py
catalog/templates/catalog/: base.html  contact.html  home.html  product_info.html
config/: settings.py  urls.py
