[tool.poetry]
name = "DJ"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.14.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[tool.black]
line-length = 119
exclude = '''
(
	/(
		\.eggs # Исключить несколько общих каталогов
		| \.git # в корне проекта
		| \.hg
		| \.mypy_cache
		| \.tox
		| \.venv
		| dist
	)/
	| foo.py # Также отдельно исключить файл с именем foo.py # в корне проекта
	)
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"
